<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_Trending"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_Trending" />

    <item
        android:id="@+id/navigation_Search"
        android:icon="@drawable/magnify"
        android:title="@string/title_search" />


    <item
        android:id="@+id/navigation_Add"
        android:icon="@drawable/plus_box"
        android:title="@string/title_Add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/alert_decagram"
        android:title="@string/title_notifications" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account_circle"
        android:title="@string/title_profile" />

</menu>
